--- a/index.html
+++ b/index.html
@@ -3,3 +3,25 @@ layout: default
 title: Home
 ---
 <h1>{{ "Hello World!" | downcase }}</h1>
+<nav>
+  .topnav {
+        overflow: hidden;
+        background-color: #333;
+      }
+      .topnav a {
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+     }
+    .topnav a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+    .topnav a.active {
+      background-color: #4CAF50;
+      color: white;
+    }
+</nav>
